--- a/client/src/CSS/scss_partials/utils/_variables.scss
+++ b/client/src/CSS/scss_partials/utils/_variables.scss
@@ -70,6 +70,13 @@ $carolina-blue-level-4: #4d91c9;
 $carolina-blue-level-5: #4885b8;
 $carolina-blue-level-6: #3f75a1;
 $carolina-blue-level-7: #38678d;
+// Cerulean blues	
+$cerulean-blue-level-1: #0bb2db;
+$cerulean-blue-level-2: #0aa9d1;
+$cerulean-blue-level-3: #09a2c9;
+$cerulean-blue-level-4: #0897bb;
+$cerulean-blue-level-5: #088eaf;
+$cerulean-blue-level-6: #0785a5;
 // Cyan blues
 $cyan-blue-level-1: #00e1ff;
 // Egyptian blues
@@ -78,24 +85,27 @@ $egyptian-blue-level-2: #0062e2;
 $egyptian-blue-level-3: #0056c7;
 $egyptian-blue-level-4: #0050b9;
 // Imperial blues
-$imperial-blue-level-1: #2588d8;
-$imperial-blue-level-2: #2380cc;
-$imperial-blue-level-3: #2179c0;
-$imperial-blue-level-4: #1f70b3;
-$imperial-blue-level-5: #1e6aa8;
-$imperial-blue-level-6: #1c629c;
-$imperial-blue-level-7: #195a8f;
-$imperial-blue-level-8: #165181;
-$imperial-blue-level-9: #154b77;
-$imperial-blue-level-10: #15466e;
-$imperial-blue-level-11: #123f63;
+$imperial-blue-level-1: #278de0;
+$imperial-blue-level-2: #2588d8;
+$imperial-blue-level-3: #2380cc;
+$imperial-blue-level-4: #2179c0;
+$imperial-blue-level-5: #1f70b3;
+$imperial-blue-level-6: #1e6aa8;
+$imperial-blue-level-7: #1c629c;
+$imperial-blue-level-8: #195a8f;
+$imperial-blue-level-9: #165181;
+$imperial-blue-level-10: #154b77;
+$imperial-blue-level-11: #15466e;
+$imperial-blue-level-12: #123f63;
 // Maganese blues
-$maganese-blue-level-1: #04beb2;
-$maganese-blue-level-2: #04b6aa;
-$maganese-blue-level-3: #03a89e;
-$maganese-blue-level-4: #049c92;
-$maganese-blue-level-5: #048f86;
-$maganese-blue-level-6: #04857c;
+$maganese-blue-level-1: #05cfc2;
+$maganese-blue-level-2: #05c7ba;
+$maganese-blue-level-3: #04beb2;
+$maganese-blue-level-4: #04b6aa;
+$maganese-blue-level-5: #03a89e;
+$maganese-blue-level-6: #049c92;
+$maganese-blue-level-7: #048f86;
+$maganese-blue-level-8: #04857c;
 // Old-Copper blues
 $old-copper-blue-level-1: #87b2bd;
 $old-copper-blue-level-2: #7aa2ac;
@@ -107,6 +117,8 @@ $peacock-blue-level-4: #258faa;
 $peacock-blue-level-5: #2388a1;
 $peacock-blue-level-6: #217e96;
 $peacock-blue-level-7: #1e768b;
+$peacock-blue-level-8: #1c6d81;
+$peacock-blue-level-9: #1a6679;
 // Queen blues
 $queen-blue-light-level-1: #587ba0;
 $queen-blue-light-level-2: #537396;
@@ -118,13 +130,16 @@ $sky-blue-light-level-1: #1fb3e4;
 $sky-blue-light-level-2: #1eaad8;
 $sky-blue-light-level-3: #1da3cf;
 $sky-blue-light-level-4: #1b99c4;
-$sky-blue-level-1: #0097c9;
-$sky-blue-level-2: #0091c2;
-$sky-blue-level-3: #018bb9;
-$sky-blue-level-4: #0083af;
-$sky-blue-level-5: #017ca5;
-$sky-blue-level-6: #007399;
-$sky-blue-level-7: #006a8d;
+$sky-blue-level-1: #00b0eb;
+$sky-blue-level-2: #00a8e0;
+$sky-blue-level-3: #009fd4;
+$sky-blue-level-4: #0097c9;
+$sky-blue-level-5: #0091c2;
+$sky-blue-level-6: #018bb9;
+$sky-blue-level-7: #0083af;
+$sky-blue-level-8: #017ca5;
+$sky-blue-level-9: #007399;
+$sky-blue-level-10: #006a8d;
 // Turkish blues
 $turkish-blue-level-1: #74acc2;
 $turkish-blue-level-2: #72aac0;
@@ -227,7 +242,7 @@ $mode-navbar-hamburger-dropdown-option-border-color-dark: $gray-level-9;
 $mode-navbar-hamburger-dropdown-option-hover-background-color-light: $gray-light-level-2;
 $mode-navbar-hamburger-dropdown-option-hover-background-color-dark: $gray-dark-level-5;
 $mode-navbar-hamburger-dropdown-option-selected-background-color-light: $baby-blue-level-1;
-$mode-navbar-hamburger-dropdown-option-selected-background-color-dark: $imperial-blue-level-11;
+$mode-navbar-hamburger-dropdown-option-selected-background-color-dark: $imperial-blue-level-12;
 $mode-navbar-hamburger-dropdown-option-name-text-color-light: $basic-blue-level-1;
 $mode-navbar-hamburger-dropdown-option-name-text-color-dark: $cyan-blue-level-1;
 $mode-navbar-hamburger-dropdown-option-icon-text-color-light: $gray-dark-level-1;
@@ -260,8 +275,6 @@ $mode-top-bar-button-background-color-light: $mode-base-background-color-light;
 $mode-top-bar-button-background-color-dark: $gray-dark-level-5;
 $mode-top-bar-button-text-color-light: $mode-base-primary-text-color-light;
 $mode-top-bar-button-text-color-dark: $mode-base-primary-text-color-dark;
-$mode-top-bar-new-item-tutorial-border-text-color-light: $egyptian-blue-level-1;
-$mode-top-bar-new-item-tutorial-border-text-color-dark: $cyan-blue-level-1;
 $mode-top-bar-new-item-tutorial-arrow-background-color-light: $mode-base-primary-text-color-light;
 $mode-top-bar-new-item-tutorial-arrow-background-color-dark: $mode-base-primary-text-color-dark;
 $mode-create-item-sidebar-background-color-light: $mode-base-background-color-light;
@@ -337,42 +350,59 @@ $theme-base-border-background-color-blue-turkish: $turkish-blue-level-4;
 $theme-brighter-border-background-color-blue-queen: $queen-blue-light-level-1;
 $theme-base-border-background-color-blue-queen: $queen-blue-dark-level-1;
 $theme-brighter-border-background-color-blue-sky: $sky-blue-light-level-2;
-$theme-base-border-background-color-blue-sky: $sky-blue-level-2;
+$theme-base-border-background-color-blue-sky: $sky-blue-level-5;
 $theme-brighter-border-background-color-blue-turquoise: $turquoise-blue-level-2;
-$theme-base-border-background-color-blue-turquoise: $maganese-blue-level-3;
+$theme-base-border-background-color-blue-turquoise: $maganese-blue-level-5;
 $theme-brighter-border-background-color-purple-rain: $rain-purple-light-level-4;
 $theme-base-border-background-color-purple-rain: $rain-purple-level-6;
 // Themes + Light/Dark mode
 $theme-mode-blue-turkish-toggle-switch-on-border-background-color-light: $turkish-blue-level-2;
 $theme-mode-blue-turkish-toggle-switch-on-border-background-color-dark: $peacock-blue-level-5;
+$theme-mode-blue-turkish-new-item-tutorial-border-text-color-light: $cerulean-blue-level-6;
+$theme-mode-blue-turkish-new-item-tutorial-border-text-color-dark: $peacock-blue-level-3;
 $theme-mode-blue-turkish-focus-border-color-light: $peacock-blue-level-4;
 $theme-mode-blue-turkish-focus-border-color-dark: $peacock-blue-level-7;
 $theme-mode-blue-turkish-text-color-light: $peacock-blue-level-5;
 $theme-mode-blue-turkish-text-color-dark: $peacock-blue-level-2;
 $theme-mode-blue-queen-toggle-switch-on-border-background-color-light: $carolina-blue-level-6;
 $theme-mode-blue-queen-toggle-switch-on-border-background-color-dark: $carolina-blue-level-7;
-$theme-mode-blue-queen-focus-border-color-light: $imperial-blue-level-3;
-$theme-mode-blue-queen-focus-border-color-dark: $imperial-blue-level-6;
-$theme-mode-blue-queen-text-color-light: $imperial-blue-level-7;
-$theme-mode-blue-queen-text-color-dark: $imperial-blue-level-1;
-$theme-mode-blue-sky-toggle-switch-on-border-background-color-light: $sky-blue-level-1;
-$theme-mode-blue-sky-toggle-switch-on-border-background-color-dark: $sky-blue-level-3;
-$theme-mode-blue-sky-focus-border-color-light: $sky-blue-level-1;
-$theme-mode-blue-sky-focus-border-color-dark: $sky-blue-level-7;
-$theme-mode-blue-sky-text-color-light: $sky-blue-level-4;
+$theme-mode-blue-queen-new-item-tutorial-border-text-color-light: $imperial-blue-level-5;
+$theme-mode-blue-queen-new-item-tutorial-border-text-color-dark: $imperial-blue-level-1;
+$theme-mode-blue-queen-focus-border-color-light: $imperial-blue-level-4;
+$theme-mode-blue-queen-focus-border-color-dark: $imperial-blue-level-7;
+$theme-mode-blue-queen-text-color-light: $imperial-blue-level-8;
+$theme-mode-blue-queen-text-color-dark: $imperial-blue-level-3;
+$theme-mode-blue-sky-toggle-switch-on-border-background-color-light: $sky-blue-level-4;
+$theme-mode-blue-sky-toggle-switch-on-border-background-color-dark: $sky-blue-level-6;
+$theme-mode-blue-sky-new-item-tutorial-border-text-color-light: $sky-blue-level-4;
+$theme-mode-blue-sky-new-item-tutorial-border-text-color-dark: $sky-blue-level-1;
+$theme-mode-blue-sky-focus-border-color-light: $sky-blue-level-4;
+$theme-mode-blue-sky-focus-border-color-dark: $sky-blue-level-10;
+$theme-mode-blue-sky-text-color-light: $sky-blue-level-7;
 $theme-mode-blue-sky-text-color-dark: $sky-blue-light-level-1;
-$theme-mode-blue-turquoise-toggle-switch-on-border-background-color-light: $maganese-blue-level-4;
-$theme-mode-blue-turquoise-toggle-switch-on-border-background-color-dark: $maganese-blue-level-6;
-$theme-mode-blue-turquoise-focus-border-color-light: $maganese-blue-level-3;
-$theme-mode-blue-turquoise-focus-border-color-dark: $maganese-blue-level-6;
-$theme-mode-blue-turquoise-text-color-light: $maganese-blue-level-6;
-$theme-mode-blue-turquoise-text-color-dark: $maganese-blue-level-1;
+$theme-mode-blue-turquoise-toggle-switch-on-border-background-color-light: $maganese-blue-level-6;
+$theme-mode-blue-turquoise-toggle-switch-on-border-background-color-dark: $maganese-blue-level-8;
+$theme-mode-blue-turquoise-new-item-tutorial-border-text-color-light: $maganese-blue-level-5;
+$theme-mode-blue-turquoise-new-item-tutorial-border-text-color-dark: $maganese-blue-level-1;
+$theme-mode-blue-turquoise-focus-border-color-light: $maganese-blue-level-5;
+$theme-mode-blue-turquoise-focus-border-color-dark: $maganese-blue-level-8;
+$theme-mode-blue-turquoise-text-color-light: $maganese-blue-level-8;
+$theme-mode-blue-turquoise-text-color-dark: $maganese-blue-level-3;
 $theme-mode-purple-rain-toggle-switch-on-border-background-color-light: $rain-purple-light-level-4;
 $theme-mode-purple-rain-toggle-switch-on-border-background-color-dark: $rain-purple-level-5;
+$theme-mode-purple-rain-new-item-tutorial-border-text-color-light: $rain-purple-level-1;
+$theme-mode-purple-rain-new-item-tutorial-border-text-color-dark: $candy-purple-level-1;
 $theme-mode-purple-rain-focus-border-color-light: $rain-purple-light-level-4;
 $theme-mode-purple-rain-focus-border-color-dark: $rain-purple-level-2;
 $theme-mode-purple-rain-text-color-light: $rain-purple-level-3;
 $theme-mode-purple-rain-text-color-dark: $candy-purple-level-1;
+// Theme (default)
+$default-theme-brighter-border-background-color: $theme-brighter-border-background-color-blue-turkish;
+$default-theme-base-border-background-color: $theme-base-border-background-color-blue-turkish;
+$default-theme-mode-toggle-switch-on-border-background-color: $theme-mode-blue-turkish-toggle-switch-on-border-background-color-light;
+$default-theme-mode-new-item-tutorial-border-text-color: $theme-mode-blue-turkish-new-item-tutorial-border-text-color-light;
+$default-theme-mode-focus-border-color: $theme-mode-blue-turkish-focus-border-color-light;
+$default-theme-mode-text-color: $theme-mode-blue-turkish-text-color-light;
 
 // Status colors
 $status-gray: $gray-level-3;
@@ -382,11 +412,6 @@ $status-orange: #ff9900;
 $status-green: #007e00;
 $status-red: #d14242;
 
-// Components (general)
-$default-theme-brighter-border-background-color: $theme-brighter-border-background-color-blue-turkish;
-$default-theme-base-border-background-color: $theme-base-border-background-color-blue-turkish;
-$default-theme-mode-focus-border-color: $theme-mode-blue-turkish-focus-border-color-light;
-$default-theme-mode-text-color: $theme-mode-blue-turkish-text-color-light;
 // Components (specific)
 $register-login-input-text-focus-border-color: $default-theme-mode-focus-border-color;
 $register-login-submit-button-border-background-color: $old-copper-blue-level-1;
@@ -394,7 +419,7 @@ $register-login-submit-button-hover-border-background-color: $old-copper-blue-le
 $register-login-bottom-link-text-color: $basic-blue-level-1;
 $breadcrumb-hamburger-close-button-text-color: $basic-red-light-level-2;
 $filter-button-active-color: $default-theme-mode-text-color;
-$table-empty-list-message-text-color: $gray-level-5;
+$table-empty-list-message-text-color: $gray-level-3;
 
 //==========
 // Heights
